name:          wsedit
version:       1.0.0.7
synopsis:      A simple terminal source code editor.
description:
homepage:
license:       OtherLicense
license-file:  LICENSE
author:        Felix Hirn
maintainer:    felix.hirn@wyvernscale.com
copyright:     2016 Felix Hirn
category:      Development
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:
    WSEdit,
    WSEdit.Buffer,
    WSEdit.Control,
    WSEdit.Control.Autocomplete,
    WSEdit.Control.Base,
    WSEdit.Control.Global,
    WSEdit.Control.Marks,
    WSEdit.Control.Selection,
    WSEdit.Control.Text,
    WSEdit.Data,
    WSEdit.Data.Pretty,
    WSEdit.Help,
    WSEdit.Keymaps,
    WSEdit.Output,
    WSEdit.Util,
    WSEdit.WordTree

  build-depends:
    base             >= 4.7   && < 5,
    bytestring       >= 0.10  && < 1,
    charsetdetect-ae >= 1.0   && < 2,
    data-default     >= 0.5.3 && < 1,
    directory        >= 1.2.6 && < 2,
    Hclip            >= 3     && < 5,
    mtl              >= 2.2.1 && < 3,
    pretty-show      >= 1.6.9 && < 2,
    safe             >= 0.3.9 && < 1,
    process          >= 1.2.3 && < 2,
    strict           >= 0.3.2 && < 1,
    transformers     >= 0.4.2 && < 1,
    vty              >= 5.6   && < 6

  default-language:    Haskell2010

  ghc-options:         -threaded
                       -Wall
                       -Werror
                       -O2

executable wsedit
  hs-source-dirs:   exec/
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:
    base   >= 4.7 && < 5,
    wsedit

  ghc-options:
    -threaded
    -Wall
    -Werror
    -O2
