name:          wsedit
version:       1.2.3.8
synopsis:      A simple terminal source code editor.
description:
homepage:      https://github.com/LadyBoonami/wsedit
license:       OtherLicense
license-file:  LICENSE.md
author:        Sophie Hirn
maintainer:    sophie.hirn@wyvernscale.com
copyright:     2016 Sophie Hirn
category:      Development
build-type:    Simple
cabal-version: >=1.10



flag dev
  description: Build with development flags, call the executable wsed-dev.
  default:     False



library
  hs-source-dirs:     src/
  default-language:   Haskell2010
  default-extensions: CPP

  exposed-modules:
    WSEdit,
    WSEdit.Arguments,
    WSEdit.Arguments.Data,
    WSEdit.Arguments.Parser,
    WSEdit.Buffer,
    WSEdit.Control.Autocomplete,
    WSEdit.Control.Base,
    WSEdit.Control.Global,
    WSEdit.Control.Marks,
    WSEdit.Control.Selection,
    WSEdit.Control.Text,
    WSEdit.Data,
    WSEdit.Data.Algorithms,
    WSEdit.Data.Pretty,
    WSEdit.ElasticTabstops,
    WSEdit.Help,
    WSEdit.Keymaps,
    WSEdit.Output,
    WSEdit.Renderer,
    WSEdit.Util,
    WSEdit.WordTree

  build-depends:
    base             >= 4.7    && < 5,
    bytestring       >= 0.10   && < 1,
    charsetdetect-ae >= 1.0    && < 2,
    data-default     >= 0.5.3  && < 1,
    deepseq          >= 1.2.0  && < 2,
    directory        >= 1.2.6  && < 2,
    filepath         >= 1.4.1  && < 2,
    hashable         >= 1.2.4  && < 2,
    Hclip            >= 3      && < 5,
    mtl              >= 2.2.1  && < 3,
    pretty-show      >= 1.6.9  && < 2,
    safe             >= 0.3.9  && < 1,
    parsec           >= 3.1.11 && < 4,
    process          >= 1.2.3  && < 2,
    split            >= 0.2.3  && < 1,
    strict           >= 0.3.2  && < 1,
    transformers     >= 0.4.2  && < 1,
    unix             >= 2.7    && < 3,
    vty              >= 5.20   && < 6

  ghc-options:
    -Wall
    -fwarn-incomplete-uni-patterns
    -fwarn-missing-import-lists
    -fwarn-tabs

  if flag(dev)
    build-depends:
      time           >= 1.6.0  && < 2

    ghc-options:
      -Werror

    cpp-options:
      -Ddev

  else
    ghc-options:
      -O2



executable wsed
  hs-source-dirs:   exec/
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:
    base   >= 4.7 && < 5,
    wsedit

  ghc-options:
    -threaded
    -Wall
    -O2

  if flag(dev)
    buildable: False
  else
    buildable: True



executable wsed-dev
  hs-source-dirs:   exec/
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:
    base   >= 4.7 && < 5,
    wsedit

  ghc-options:
    -threaded
    -Wall
    -Werror

  if flag(dev)
    buildable: True
  else
    buildable: False



test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  hs-source-dirs:   test/
  ghc-options:      -Wall

  other-modules:
    Base,
    WSEdit.BufferSpec,
    WSEdit.Arguments.ParserSpec,
    WSEdit.Data.AlgorithmsSpec

  build-depends:
    base,
    hashable,
    hspec,
    parsec,
    QuickCheck,
    wsedit
